<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aquajusmin.sakewonomu.inputsakeinfo.InputSakeInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="5dp">

        <TextView
            android:id="@+id/recordDate"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            style="@style/TextStyle.Mid"
            android:text="@={viewModel.date}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2023/01/01"/>

        <EditText
            android:id="@+id/sakeName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            style="@style/EditTextStyle"
            android:textSize="18sp"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/input_info_hint_sake_name"
            android:text="@={viewModel.sakeName}"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recordDate"/>

        <TextView
            android:id="@+id/kuraLabel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            style="@style/TextStyle.Large"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@id/kuraName"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/input_info_kura_label"/>

        <TextView
            android:id="@+id/kuraName"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            style="@style/EditTextStyle"
            android:text="@{viewModel.kuraInfo.name}"
            android:scrollbars="horizontal"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/kuraLabel"
            app:layout_constraintTop_toBottomOf="@id/sakeName"
            android:hint="@string/input_info_hint_kura_name"
            tools:background="@android:color/primary_text_light" />

        <ImageView
            android:id="@+id/lockKuraNameIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@id/kuraName"
            app:layout_constraintStart_toEndOf="@id/kuraName"
            android:src="@drawable/lock_icon_unlock"/>

        <TextView
            android:id="@+id/prefectureName"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="bottom"
            style="@style/TextStyle.Mid"
            android:text="@{viewModel.kuraInfo.prefectures}"
            app:layout_constraintBottom_toBottomOf="@id/kuraName"
            app:layout_constraintStart_toEndOf="@id/lockKuraNameIcon"
            tools:text="（新潟県）"/>

        <LinearLayout
            android:id="@+id/starPointView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="40dp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kuraName">

            <TextView
                android:id="@+id/star_point_label"
                android:layout_width="80dp"
                android:layout_height="40dp"
                style="@style/TextStyle.Large"
                android:gravity="center"
                android:text="@string/input_info_star_point_label"/>

            <com.aquajusmin.sakewonomu.viewitems.SelectPointView
                android:id="@+id/starPointBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                pointValue="@{viewModel.starPoint}"/>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/sakeRankRadioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/starPointView">
            <RadioButton
                android:id="@+id/jundaiButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_junmai_daigin" />
            <RadioButton
                android:id="@+id/daiginButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_dai_ginjou" />
            <RadioButton
                android:id="@+id/junginButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_junmai_ginjou" />
            <RadioButton
                android:id="@+id/junmaiButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_junmai" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/sakeRankRadioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/sakeRankRadioGroup1">
            <RadioButton
                android:id="@+id/ginjouButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_ginjou" />
            <RadioButton
                android:id="@+id/tokujunButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_tokubetu_junmai" />
            <RadioButton
                android:id="@+id/honjouzouButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_honjouzou" />
            <RadioButton
                android:id="@+id/otherButton"
                style="@style/RadioButton"
                android:text="@string/sake_rank_other" />
        </RadioGroup>

        <ImageView
            android:id="@+id/sakePicture"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/no_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sakeRankRadioGroup2"/>

        <LinearLayout
            android:id="@+id/juicyPointView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginVertical="1dp"
            android:paddingHorizontal="2dp"
            app:layout_constraintTop_toTopOf="@id/sakePicture"
            app:layout_constraintStart_toEndOf="@id/sakePicture"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_juicy_point_label_min"/>

            <com.aquajusmin.sakewonomu.viewitems.SelectPointView
                android:id="@+id/juicyPointBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                pointValue="@{viewModel.juicyPoint}"/>

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_juicy_point_label_max"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sweetPointView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginVertical="1dp"
            android:paddingHorizontal="2dp"
            app:layout_constraintTop_toBottomOf="@id/juicyPointView"
            app:layout_constraintStart_toEndOf="@id/sakePicture"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_sweet_point_label_min"/>

            <com.aquajusmin.sakewonomu.viewitems.SelectPointView
                android:id="@+id/sweetPointBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                pointValue="@{viewModel.sweetPoint}"/>

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_sweet_point_label_max"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/richPointView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginVertical="1dp"
            android:paddingHorizontal="2dp"
            app:layout_constraintTop_toBottomOf="@id/sweetPointView"
            app:layout_constraintStart_toEndOf="@id/sakePicture"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_rich_point_label_min"/>

            <com.aquajusmin.sakewonomu.viewitems.SelectPointView
                android:id="@+id/richPointBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                pointValue="@{viewModel.richPoint}"/>

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_rich_point_label_max"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scentPointView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginVertical="1dp"
            android:paddingHorizontal="2dp"
            app:layout_constraintTop_toBottomOf="@id/richPointView"
            app:layout_constraintStart_toEndOf="@id/sakePicture"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_scent_point_label_min"/>

            <com.aquajusmin.sakewonomu.viewitems.SelectPointView
                android:id="@+id/scentPointBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                pointValue="@{viewModel.scentPoint}"/>

            <TextView
                style="@style/StartPointLabel"
                android:text="@string/input_info_scent_point_label_max"/>

        </LinearLayout>

        <EditText
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:gravity="top|start"
            style="@style/EditTextStyle"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:hint="@string/input_info_hint_memo"
            android:text="@={viewModel.memo}"
            app:layout_constraintTop_toBottomOf="@id/sakePicture"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sakeTypeCheckBoxGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/memo"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/checkBoxGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <CheckBox
                    android:id="@+id/nama_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_nama"/>
                <CheckBox
                    android:id="@+id/gensyu_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_gensyu"/>
                <CheckBox
                    android:id="@+id/nigori_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_nigori"/>
                <CheckBox
                    android:id="@+id/kimoto_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_kimoto"/>
                <CheckBox
                    android:id="@+id/sizuku_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_sizuku_tori"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/checkBoxGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/checkBoxGroup1"
                app:layout_constraintStart_toStartOf="parent">
                <CheckBox
                    android:id="@+id/happou_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_happou"/>
                <CheckBox
                    android:id="@+id/yamahai_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_yamahai"/>
                <CheckBox
                    android:id="@+id/kosyu_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_kosyu"/>
                <CheckBox
                    android:id="@+id/kijousyu_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_kijousyu"/>
                <CheckBox
                    android:id="@+id/hiyaoroshi_check"
                    style="@style/CheckBox"
                    android:text="@string/sake_type_hiyaorosi"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/placeLabel"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            style="@style/TextStyle.Large"
            android:text="@string/input_info_place_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sakeTypeCheckBoxGroup"/>

        <EditText
            android:id="@+id/placeName"
            android:layout_width="250dp"
            android:layout_height="30dp"
            style="@style/EditTextStyle"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:hint="@string/input_info_hint_place_name"
            android:text="@={viewModel.place}"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@id/placeLabel"
            app:layout_constraintTop_toTopOf="@id/placeLabel"/>

        <ImageView
            android:id="@+id/lockPlaceNameIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/lock_icon_unlock"
            app:layout_constraintStart_toEndOf="@id/placeName"
            app:layout_constraintBottom_toBottomOf="@id/placeName" />

        <CheckBox
            android:id="@+id/continue_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            style="@style/CheckBox"
            android:text="続けて入力する"
            app:layout_constraintTop_toBottomOf="@id/placeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="10dp"
            style="@style/ButtonStyle.NormalButton"
            android:text="@string/input_info_save_button_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/continue_checkbox"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>